--- a/shell/linux/Makefile
+++ b/shell/linux/Makefile
@@ -518,7 +518,7 @@ endif
 libchdr/libchdr-static.a:
 	mkdir -p libchdr && \
 	  cd libchdr && \
-	  cmake $(CMAKE_FLAVOR) -DBUILD_SHARED_LIBS=OFF $(RZDCY_SRC_DIR)/deps/libchdr && \
+	  cmake $(CMAKE_FLAVOR) -DBUILD_SHARED_LIBS=OFF -DCMAKE_SH=SH-NOTFOUND $(RZDCY_SRC_DIR)/deps/libchdr && \
 	  cmake --build .
 
 
