--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -916,7 +916,7 @@ elseif(APPLE)
         MACOSX_BUNDLE_EXECUTABLE_NAME "Flycast"
         MACOSX_BUNDLE_INFO_STRING ""
         MACOSX_BUNDLE_ICON_FILE "AppIcon"
-        MACOSX_BUNDLE_GUI_IDENTIFIER "com.reicast.Flycast"
+        MACOSX_BUNDLE_GUI_IDENTIFIER "com.flyinghead.Flycast"
         MACOSX_BUNDLE_LONG_VERSION_STRING ""
         MACOSX_BUNDLE_BUNDLE_NAME "Flycast"
         MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0"
