--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,3 +30,20 @@ jobs:
         with:
           name: flycast-debug.apk
           path: shell/android-studio/flycast/build/outputs/apk/debug/flycast-debug.apk
+
+      - name: Set up git vars
+        run: |
+          echo GIT_HASH=`git log --pretty=format:'%h' -n 1` >> $GITHUB_ENV
+          echo GIT_BUILD=`git describe --all --always | sed 's/remotes\/origin/heads/'`-$GIT_HASH >> $GITHUB_ENV
+
+      - uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks
+        env:
+          AWS_S3_BUCKET: flycast-builds
+          AWS_ACCESS_KEY_ID: AKIAJOZQS4H2PHQWYFCA
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY }}
+          AWS_REGION: 'us-east-2'
+          SOURCE_DIR: 'shell/android-studio/flycast/build/outputs/apk/debug/flycast-debug.apk'
+          DEST_DIR: android/${{ env.GIT_BUILD }}
+        if: ${{ github.event_name == 'push' }}
