--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -97,5 +97,5 @@ jobs:
           aws-region: us-east-2
 
       - name: Upload to S3
-        run: aws s3 sync build/artifact s3://flycast-builds/${{ matrix.config.destDir }}/{{ env.GIT_BUILD }} --acl public-read --follow-symlinks
+        run: aws s3 sync build/artifact s3://flycast-builds/${{ matrix.config.destDir }}/${{ env.GIT_BUILD }} --acl public-read --follow-symlinks
         if: ${{ github.event_name == 'push' && matrix.config.destDir != '' }}
