--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -96,7 +96,8 @@ jobs:
           aws-access-key-id: AKIAJOZQS4H2PHQWYFCA
           aws-secret-access-key: ${{ secrets.S3_SECRET_KEY }}
           aws-region: us-east-2
+        if: github.event_name == 'push'
 
       - name: Upload to S3
         run: aws s3 sync build/artifact s3://flycast-builds/${{ matrix.config.destDir }}/${{ env.GIT_BUILD }} --acl public-read --follow-symlinks
-        if: ${{ github.event_name == 'push' && matrix.config.destDir != '' }}
+        if: github.event_name == 'push' && matrix.config.destDir != ''
