Add vixl aarch64 dependency + build arm64 in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/shell/cmake")
 
 if(APPLE)
 	set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9" CACHE STRING "Minimum macOS deployment version")
+    set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "")
 endif()
 
 project(flycast)
@@ -888,6 +889,54 @@ elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "i686.*|i386.*|x86.*|amd64.*|x86_64.*|AMD6
     endif()
 else()
     message(FATAL_ERROR "Unknown target processor: ${CMAKE_SYSTEM_PROCESSOR}")
+endif()
+
+# TODO: de-dup for universal binary
+if(APPLE)
+    target_include_directories(${PROJECT_NAME} PRIVATE core/deps/vixl)
+    target_sources(${PROJECT_NAME} PRIVATE
+        core/deps/vixl/aarch64/abi-aarch64.h
+        core/deps/vixl/aarch64/assembler-aarch64.cc
+        core/deps/vixl/aarch64/assembler-aarch64.h
+        core/deps/vixl/aarch64/constants-aarch64.h
+        core/deps/vixl/aarch64/cpu-aarch64.cc
+        core/deps/vixl/aarch64/cpu-aarch64.h
+        core/deps/vixl/aarch64/cpu-features-auditor-aarch64.cc
+        core/deps/vixl/aarch64/cpu-features-auditor-aarch64.h
+        core/deps/vixl/aarch64/decoder-aarch64.cc
+        core/deps/vixl/aarch64/decoder-aarch64.h
+        core/deps/vixl/aarch64/disasm-aarch64.cc
+        core/deps/vixl/aarch64/disasm-aarch64.h
+        core/deps/vixl/aarch64/instructions-aarch64.cc
+        core/deps/vixl/aarch64/instructions-aarch64.h
+        core/deps/vixl/aarch64/instrument-aarch64.cc
+        core/deps/vixl/aarch64/instrument-aarch64.h
+        core/deps/vixl/aarch64/logic-aarch64.cc
+        core/deps/vixl/aarch64/macro-assembler-aarch64.cc
+        core/deps/vixl/aarch64/macro-assembler-aarch64.h
+        core/deps/vixl/aarch64/operands-aarch64.cc
+        core/deps/vixl/aarch64/operands-aarch64.h
+        core/deps/vixl/aarch64/pointer-auth-aarch64.cc
+        core/deps/vixl/aarch64/simulator-aarch64.cc
+        core/deps/vixl/aarch64/simulator-aarch64.h
+        core/deps/vixl/aarch64/simulator-constants-aarch64.h
+        core/deps/vixl/assembler-base-vixl.h
+        core/deps/vixl/code-buffer-vixl.cc
+        core/deps/vixl/code-buffer-vixl.h
+        core/deps/vixl/code-generation-scopes-vixl.h
+        core/deps/vixl/compiler-intrinsics-vixl.cc
+        core/deps/vixl/compiler-intrinsics-vixl.h
+        core/deps/vixl/cpu-features.cc
+        core/deps/vixl/cpu-features.h
+        core/deps/vixl/globals-vixl.h
+        core/deps/vixl/invalset-vixl.h
+        core/deps/vixl/macro-assembler-interface.h
+        core/deps/vixl/platform-vixl.h
+        core/deps/vixl/pool-manager.h
+        core/deps/vixl/pool-manager-impl.h
+        core/deps/vixl/utils-vixl.cc
+        core/deps/vixl/utils-vixl.h)
+    target_sources(${PROJECT_NAME} PRIVATE core/rec-ARM64/rec_arm64.cpp core/rec-ARM64/arm64_regalloc.h)
 endif()
 
 if(ANDROID)
