Update Windows resource and version.h.in files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -950,7 +950,7 @@ elseif(WIN32)
     endif()
     target_sources(${PROJECT_NAME} PRIVATE
             core/windows/win_vmem.cpp
-            shell/windows/reicast.rc)
+            shell/windows/flycast.rc)
 
     target_link_libraries(${PROJECT_NAME} PRIVATE dsound opengl32 winmm ws2_32 wsock32 xinput9_1_0)
 endif()
