ci: remove flac package

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -2,7 +2,7 @@ freebsd_instance:
   image_family: freebsd-12-2
 
 task:
-  install_script: pkg install -y alsa-lib cmake evdev-proto flac git libao libevdev libudev-devd libzip mesa-libs miniupnpc ninja pkgconf png pulseaudio sdl2
+  install_script: pkg install -y alsa-lib cmake evdev-proto git libao libevdev libudev-devd libzip mesa-libs miniupnpc ninja pkgconf png pulseaudio sdl2
   script:
     - git submodule update --init --recursive
     - cmake -B build -DCMAKE_BUILD_TYPE=Release -G Ninja
