--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - name: Set up build environment (macos-latest)
         run: |
-          brew install ccache flac libao libomp pulseaudio zlib
+          brew install ccache libao libomp pulseaudio zlib
           echo "/usr/local/opt/ccache/libexec" >> $GITHUB_PATH
           echo "CCACHE_DIR=/tmp/ccache" >> $GITHUB_ENV
         if: matrix.config.os == 'macos-latest'
