--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -924,7 +924,7 @@ if(MINGW)
     target_link_libraries(${PROJECT_NAME} PRIVATE "-lopenlibm")
 elseif(APPLE)
     target_link_directories(${PROJECT_NAME} PRIVATE "core/deps/openlibm")
-    target_link_libraries(${PROJECT_NAME} PRIVATE "libopenlibm")
+    target_link_libraries(${PROJECT_NAME} PRIVATE "libopenlibm.3.dylib")
 endif()
 
 target_sources(${PROJECT_NAME} PRIVATE
