--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Package app (linux)
         run: |
           mv build/artifact/flycast build/artifact/flycast-gdxsv
-          zip ${{ matrix.config.packageName }} build/artifact/flycast-gdxsv
+          zip build/artifact/${{ matrix.config.packageName }} build/artifact/flycast-gdxsv
           rm build/artifact/flycast-gdxsv
         if: matrix.config.name == 'x86_64-pc-linux-gnu'
 
