Match git describe with `gdxsv-` prefix Translate git describe to semver format

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,8 @@ endif()
 find_package(Git)
 if(GIT_FOUND AND EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.git")
     execute_process(
-        COMMAND ${GIT_EXECUTABLE} describe --tags --always
+        COMMAND ${GIT_EXECUTABLE} describe --tags --always --match "gdxsv-*"
+        COMMAND sed "s/-\\([[:digit:]]\\{1,\\}\\)-g\\(.\\{8\\}$\\)/-dev.\\1+\\2/"
         OUTPUT_VARIABLE GIT_VERSION
         OUTPUT_STRIP_TRAILING_WHITESPACE
     )
